samples/_failures_safe/1761298010_0ecb15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1091246d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1091246d.c:177:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  177 |     TokenList* list
      |     ^~~~~~~~~
./samples/SAFE/__tmp_1091246d.c:177:5: error: expected declaration or statement at end of input
